<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:background="@color/white"
    android:backgroundTint="@color/white"
    tools:context=".view.viewMap.map_view">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:backgroundTint="@color/white">

            <TextView
                android:id="@+id/name_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:text="@string/business"
                android:textColor="@color/black"
                android:textSize="23sp"
                android:textStyle="bold" />

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/google_map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_below="@+id/name_location" />

            <Button
                android:id="@+id/register_"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/google_map"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:backgroundTint="#2A2929"
                android:text="@string/_register"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/cancel_"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/register_"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:backgroundTint="#D6370F"
                android:text="@string/cancel"
                android:textColor="@color/white" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</ScrollView>